Fix incorrect overflow

--- a/src/view/components/Devtools.css
+++ b/src/view/components/Devtools.css
@@ -9,6 +9,7 @@
 
 	/* Different browsers may have different defaults */
 	font-family: sans-serif;
+	overflow: hidden;
 }
 
 .root * {
