--- a/src/view/components/stats/StatsPanel.css
+++ b/src/view/components/stats/StatsPanel.css
@@ -5,6 +5,7 @@
 .content {
 	grid-area: content;
 	padding: 1rem;
+	overflow: auto;
 }
 
 .label {
